# rust-practice

./: Cargo.toml
binding-borrow/: Cargo.toml
cell-example/: Cargo.toml
cell-example/src/: main.rs
maps/src/: main.rs  maps.md
miscellaneous/: Cargo.toml
serde-example/: Cargo.toml
serde-example/src/: main.rs
standard-lib/: Cargo.toml
utf-8/: Cargo.toml
utf-8/src/: main.rs
