[workspace]
resolver = "2"
members = [ "binding-borrow", "cell-example","life-time", "maps", "miscellaneous", "serde-example", "standard-lib", "utf-8"]

[profile.release]
codegen-units = 1
lto           = true
panic         = "abort"
strip         = true

[workspace.dependencies]
serde = "1.0.217"
serde_json = "1.0.135"
